--- a/ConsulTester/appsettings.Development.json
+++ b/ConsulTester/appsettings.Development.json
@@ -67,7 +67,9 @@
 
       //"HttpUrl": "http://192.168.0.104:5248/healthz",
       "HttpsUrl": "https://192.168.0.104:7094/healthz"
-    }
+    },
+
+    "Tags": ["dev", "v1"]
   }
 
 }
