--- a/ConsulTester/appsettings.Development.json
+++ b/ConsulTester/appsettings.Development.json
@@ -58,15 +58,17 @@
     "ServiceName": "Test API 01",
     "ServiceId": "Api01",
 
+    "ServiceScheme": "https",
     "ServiceAddress": "192.168.12.112",
     "ServicePort": 7094,
+    
+    "Tags": [ "dev", "v1" ],
 
     "HealthChecks": {
       "IntervalSeconds": "5",
       "TimeoutSeconds": "60",
 
-      "HttpsUrl": "https://192.168.12.112:7094/healthz",
-      "Tags": [ "dev", "v1" ]
+      "HttpsUrl": "https://192.168.12.112:7094/healthz"
     }
   }
 
