--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft.AspNetCore": "Trace"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug",
+      "Yarp": "Trace"
     }
   }
 }
