--- a/OrchestratorTester/appsettings.Development.json
+++ b/OrchestratorTester/appsettings.Development.json
@@ -14,16 +14,16 @@
     "ServiceName": "Test API 02",
     "ServiceId": "Api02",
 
+    "ServiceScheme": "https",
     "ServiceAddress": "192.168.0.104",
-    "ServicePort": 5015,
+    "ServicePort": 7005,
 
-    "Tags": ["flight-service", "base"],
+    "Tags": [ "flight-service", "dev" ],
 
     "HealthChecks": {
       "IntervalSeconds": "5",
       "TimeoutSeconds": "60",
 
-      //"HttpUrl": "http://192.168.0.104:5015/healthz",
       "HttpsUrl": "https://192.168.0.104:7005/healthz"
     }
   }
