done. needs refactor

--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Debug",
       "Yarp": "Trace"
     }
+  },
+
+  "ConsulServiceDiscovery": {
+    "Client": {
+      "Host": "http://localhost:8500",
+      "Datacenter": "yarp_dc"
+    }
   }
+
+
 }
