--- a/ConsulTester/appsettings.Development.json
+++ b/ConsulTester/appsettings.Development.json
@@ -50,26 +50,35 @@
     }
   },
 
-  "ServiceDiscovery": {
-    "Consul": {
-      "Address": "http://127.0.0.1:8500"
+
+
+  "ConsulServiceDiscovery": {
+
+    "Client": {
+      "Host": "http://127.0.0.1:8500",
+      "Datacenter": ""
     },
 
-    "ServiceName": "Test API 01",
-    "ServiceId": "Api01",
+    "Registration": {
+      "Name": "Api 01",
+      "Address": "https://192.168.0.104",
+      "Port": 7094,
 
-    "ServiceScheme": "https",
-    "ServiceAddress": "192.168.0.104",
-    "ServicePort": 7094,
-    
-    "Tags": [ "dev", "v1" ],
+      "Meta": {
+        "yarp_is_enabled": "true",
+        "yarp_route_match_path": "/api01/items/{**remainder}",
+        "yarp_route_transform_path": "/api01test/{**remainder}",
 
-    "HealthChecks": {
-      "IntervalSeconds": "5",
-      "TimeoutSeconds": "60",
+        "service_health_endpoint": "/healthz",
+        "service_health_check_seconds": 5,
+        "service_health_timeout_seconds": 10,
+        "service_health_deregister_seconds": 30
+      },
 
-      "HttpsUrl": "https://192.168.0.104:7094/healthz"
+      "Tags": [ "train", "b2b", "production" ]
     }
+
   }
+
 
 }
