--- a/OrchestratorTester/appsettings.Development.json
+++ b/OrchestratorTester/appsettings.Development.json
@@ -6,26 +6,32 @@
     }
   },
 
-  "ServiceDiscovery": {
-    "Consul": {
-      "Address": "http://127.0.0.1:8500"
+  "ConsulServiceDiscovery": {
+
+    "Client": {
+      "Host": "http://127.0.0.1:8500",
+      "Datacenter": ""
     },
 
-    "ServiceName": "Test API 02",
-    "ServiceId": "Api02",
+    "Registration": {
+      "Name": "Api 02",
+      "Address": "https://192.168.0.104",
+      "Port": 7005,
 
-    "ServiceScheme": "https",
-    "ServiceAddress": "192.168.0.104",
-    "ServicePort": 7005,
+      "Meta": {
+        "yarp_is_enabled": "true",
+        "yarp_route_match_path": "/api02/items/{**remainder}",
+        "yarp_route_transform_path": "/api02test/{**remainder}",
 
-    "Tags": [ "flight-service", "dev" ],
+        "service_health_endpoint": "/status",
+        "service_health_check_seconds": 5,
+        "service_health_timeout_seconds": 10,
+        "service_health_deregister_seconds": 30
+      },
 
-    "HealthChecks": {
-      "IntervalSeconds": "5",
-      "TimeoutSeconds": "60",
-
-      "HttpsUrl": "https://192.168.0.104:7005/healthz"
+      "Tags": [ "flight", "b2b" ]
     }
+
   }
 
 }
