--- a/ApiGateway.Yarp.Providers.Consul/AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Consul.csproj
+++ b/ApiGateway.Yarp.Providers.Consul/AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Consul.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<InvariantGlobalization>true</InvariantGlobalization>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Consul" Version="1.7.14.2" />
@@ -13,6 +12,10 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="2.1.0" />
 		<PackageReference Include="Treyt.Yarp.ReverseProxy.Swagger" Version="3.3.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Abstractions\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
