--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -11,8 +11,11 @@
     "Client": {
       "Host": "http://localhost:8500",
       "Datacenter": "yarp_dc"
+    },
+
+    "Reload": {
+      "IntervalSeconds": 30
     }
+
   }
-
-
 }
