--- a/ConsulTester/appsettings.Development.json
+++ b/ConsulTester/appsettings.Development.json
@@ -1,73 +1,27 @@
 {
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft.AspNetCore": "Warning"
-  //  }
-  //},
-
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.AspNetCore": "Information",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Async",
-        "Args": {
-          "configure": [
-            {
-              "Name": "Console",
-              "Args": {
-                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:j}{NewLine}{Properties:j}{NewLine}{Exception}"
-              }
-            },
-            {
-              "Name": "File",
-              "Args": {
-                "restrictedToMinimumLevel": "Warning",
-                "path": "Logs\\log.txt",
-                "rollingInterval": "Day",
-                "fileSizeLimitBytes": 10240,
-                "rollOnFileSizeLimit": true,
-                "retainedFileCountLimit": 30
-              }
-            }
-          ]
-        }
-      }
-    ],
-
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithExceptionDetails" ],
-    "Properties": {
-      "ApplicationName": "SampleApp",
-      "Environment": "Int"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
 
-
-
   "ConsulServiceDiscovery": {
 
-    "Client": {
+    "ConsulClient": {
       "Host": "http://127.0.0.1:8500",
       "Datacenter": ""
     },
 
-    "Registration": {
+    "ServiceRegistration": {
       "Name": "Api 01",
       "Address": "https://192.168.0.104",
       "Port": 7094,
 
       "Meta": {
         "yarp_is_enabled": "true",
-        "yarp_route_match_path": "/api01/items/{**remainder}",
-        "yarp_route_transform_path": "/api01test/{**remainder}",
+        "yarp_route_match_path": "/api01/{**remainder}",
+        "yarp_route_transform_path": "{**remainder}",
 
         "service_health_endpoint": "/healthz",
         "service_health_check_seconds": 5,
