--- a/OrchestratorTester/appsettings.Development.json
+++ b/OrchestratorTester/appsettings.Development.json
@@ -8,20 +8,20 @@
 
   "ConsulServiceDiscovery": {
 
-    "Client": {
+    "ConsulClient": {
       "Host": "http://127.0.0.1:8500",
       "Datacenter": ""
     },
 
-    "Registration": {
+    "ServiceRegistration": {
       "Name": "Api 02",
       "Address": "https://192.168.0.104",
       "Port": 7005,
 
       "Meta": {
         "yarp_is_enabled": "true",
-        "yarp_route_match_path": "/api02/items/{**remainder}",
-        "yarp_route_transform_path": "/api02test/{**remainder}",
+        "yarp_route_match_path": "/api02/{**remainder}",
+        "yarp_route_transform_path": "{**remainder}",
 
         "service_health_endpoint": "/status",
         "service_health_check_seconds": 5,
