--- a/ApiGateway/AtiyanSeir.B2B.ApiGateway.csproj
+++ b/ApiGateway/AtiyanSeir.B2B.ApiGateway.csproj
@@ -16,7 +16,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Abstractions\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Abstractions.csproj" />
-	  <ProjectReference Include="..\ApiGateway.Yarp.Providers.Consul\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Consul.csproj" />
+	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Consul\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Consul.csproj" />
 	</ItemGroup>
 
 </Project>
