--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug",
-      "Yarp": "Trace"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Information",
+      "Yarp": "Information"
     }
   },
 
