okay shod..refactor kon va bebar untraf

--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -1,19 +1,25 @@
 {
   "Logging": {
+    "Console": {
+      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
+    },
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
+      
       "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.Routing.*": "Warning",
+
       "Yarp": "Information"
     }
   },
 
   "ConsulServiceDiscovery": {
-    "Client": {
+    "ConsulClient": {
       "Host": "http://localhost:8500",
       "Datacenter": "yarp_dc"
     },
 
-    "Reload": {
+    "ReloadRoutesAndClusters": {
       "IntervalSeconds": 30
     }
 
