--- a/Smples/Api1/appsettings.Development.json
+++ b/Smples/Api1/appsettings.Development.json
@@ -14,13 +14,14 @@
     },
 
     "ServiceRegistration": {
-      "Name": "Api 01",
-      "Address": "https://192.168.0.104",
+      "Name": "MYYY TESTTTT Apiiii Orderrr",
+      "Address": "https://192.168.12.112",
       "Port": 7094,
 
       "Meta": {
         "yarp_is_enabled": "true",
-        "yarp_route_match_path": "/api01/{**remainder}",
+
+        "yarp_route_match_path": "/order/{**remainder}",
         "yarp_route_transform_path": "{**remainder}",
 
         "service_health_endpoint": "/healthz",
