--- a/Smples/Api2/appsettings.Development.json
+++ b/Smples/Api2/appsettings.Development.json
@@ -14,8 +14,8 @@
     },
 
     "ServiceRegistration": {
-      "Name": "Api 02",
-      "Address": "https://192.168.0.104",
+      "Name": "HEYYY Api 0002",
+      "Address": "https://192.168.12.112",
       "Port": 7005,
 
       "Meta": {
