--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -3,13 +3,14 @@
     "Console": {
       "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
     },
+
     "LogLevel": {
       "Default": "Debug",
       
       "Microsoft.AspNetCore": "Information",
       "Microsoft.AspNetCore.Routing.*": "Warning",
 
-      "Yarp": "Information"
+      "Yarp": "Trace"
     }
   },
 
@@ -19,9 +20,14 @@
       "Datacenter": "yarp_dc"
     },
 
-    "ReloadRoutesAndClusters": {
+    "AutoDiscovery": {
+      "IsEnabled": true,
       "IntervalSeconds": 30
     }
+  },
 
+  "CentralSwagger": {
+    "IsEnabled": true
   }
+
 }
