--- a/Smples/Api1/appsettings.Development.json
+++ b/Smples/Api1/appsettings.Development.json
@@ -15,7 +15,7 @@
 
     "ServiceRegistration": {
       "Name": "MYYY TESTTTT Apiiii Orderrr",
-      "Address": "https://192.168.12.112",
+      "Address": "https://192.168.0.104",
       "Port": 7094,
 
       "Meta": {
@@ -24,10 +24,10 @@
         "yarp_route_match_path": "/order/{**remainder}",
         "yarp_route_transform_path": "{**remainder}",
 
-        "service_health_endpoint": "/healthz",
+        "service_health_check_endpoint": "/healthz",
         "service_health_check_seconds": 5,
-        "service_health_timeout_seconds": 10,
-        "service_health_deregister_seconds": 30
+        "service_health_check_timeout_seconds": 10,
+        "service_health_check_deregister_seconds": 30
       },
 
       "Tags": [ "train", "b2b", "production" ]
