--- a/Smples/Api2/appsettings.Development.json
+++ b/Smples/Api2/appsettings.Development.json
@@ -15,7 +15,7 @@
 
     "ServiceRegistration": {
       "Name": "HEYYY Api 0002",
-      "Address": "https://192.168.12.112",
+      "Address": "https://192.168.0.104",
       "Port": 7005,
 
       "Meta": {
@@ -23,10 +23,10 @@
         "yarp_route_match_path": "/api02/{**remainder}",
         "yarp_route_transform_path": "{**remainder}",
 
-        "service_health_endpoint": "/status",
+        "service_health_check_endpoint": "/status",
         "service_health_check_seconds": 5,
-        "service_health_timeout_seconds": 10,
-        "service_health_deregister_seconds": 30
+        "service_health_check_timeout_seconds": 10,
+        "service_health_check_deregister_seconds": 30
       },
 
       "Tags": [ "flight", "b2b" ]
