--- a/Smples/Api1/appsettings.Development.json
+++ b/Smples/Api1/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
 
-  "ConsulServiceDiscovery": {
+  "ConsulServiceRegistry": {
 
     "ConsulClient": {
       "Host": "http://127.0.0.1:8500",
@@ -15,19 +15,20 @@
 
     "ServiceRegistration": {
       "Name": "MYYY TESTTTT Apiiii Orderrr",
-      "Address": "https://192.168.0.104",
+      //"Address": "https://rcdk",
+      //"Address": "https://192.168.0.104",
+      "Schema": "https",
       "Port": 7094,
 
       "Meta": {
         "yarp_is_enabled": "true",
-
         "yarp_route_match_path": "/order/{**remainder}",
         "yarp_route_transform_path": "{**remainder}",
 
         "service_health_check_endpoint": "/healthz",
-        "service_health_check_seconds": 5,
-        "service_health_check_timeout_seconds": 10,
-        "service_health_check_deregister_seconds": 30
+        "service_health_check_seconds": "5",
+        "service_health_check_timeout_seconds": "10",
+        "service_health_check_deregister_seconds": "30"
       },
 
       "Tags": [ "train", "b2b", "production" ]
