--- a/Smples/Api2/appsettings.Development.json
+++ b/Smples/Api2/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
 
-  "ConsulServiceDiscovery": {
+  "ConsulServiceRegistry": {
 
     "ConsulClient": {
       "Host": "http://127.0.0.1:8500",
@@ -15,7 +15,8 @@
 
     "ServiceRegistration": {
       "Name": "HEYYY Api 0002",
-      "Address": "https://192.168.0.104",
+      //"Address": "https://192.168.0.104",
+      "Schema": "https",
       "Port": 7005,
 
       "Meta": {
