--- a/Smples/Api2/Properties/launchSettings.json
+++ b/Smples/Api2/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://0.0.0.0:7005;http://0.0.0.0:5015",
+      "applicationUrl": "https://rcdk:7005;http://0.0.0.0:5015",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
