--- a/launchSettings.json
+++ b/launchSettings.json
@@ -3,6 +3,9 @@
     "Docker Compose": {
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
+      "composeLaunchAction": "LaunchBrowser",
+      "composeLaunchServiceName": "atiyanseir.b2b.apigateway",
+      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
       "serviceActions": {
         "atiyanseir.b2b.apigateway": "StartDebugging"
       }
