--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -5,12 +5,12 @@
     },
 
     "LogLevel": {
-      "Default": "Debug",
-      
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.AspNetCore.Routing.*": "Warning",
+      "Default": "Information",
 
-      "Yarp": "Trace"
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.Routing.*": "Warning"
+
+      //"Yarp": "Trace"
     }
   },
 
