--- a/Samples/Api1/appsettings.Development.json
+++ b/Samples/Api1/appsettings.Development.json
@@ -13,16 +13,15 @@
       "Datacenter": ""
     },
 
-    "ServiceRegistration": {
-      "Name": "MYYY TESTTTT Apiiii Orderrr",
-      //"Address": "https://rcdk",
-      //"Address": "https://192.168.0.104",
-      "Schema": "https",
+    "ServiceInfo": {
+      "Name": "Sample API 1",
+      "Scheme": "https",
+      "Address": "192.168.0.104",
       "Port": 7094,
 
       "Meta": {
         "yarp_is_enabled": "true",
-        "yarp_route_match_path": "/order/{**remainder}",
+        "yarp_route_match_path": "/api1/{**remainder}",
         "yarp_route_transform_path": "{**remainder}",
 
         "service_health_check_endpoint": "/healthz",
@@ -31,7 +30,7 @@
         "service_health_check_deregister_seconds": "30"
       },
 
-      "Tags": [ "train", "b2b", "production" ]
+      "Tags": [ "my-custom-business", "test" ]
     }
 
   }
