--- a/Samples/Api2/appsettings.Development.json
+++ b/Samples/Api2/appsettings.Development.json
@@ -13,10 +13,10 @@
       "Datacenter": ""
     },
 
-    "ServiceRegistration": {
-      "Name": "HEYYY Api 0002",
-      //"Address": "https://192.168.0.104",
-      "Schema": "https",
+    "ServiceInfo": {
+      "Name": "My sample Api 2",
+      "Scheme": "https",
+      "Address": "192.168.0.104",
       "Port": 7005,
 
       "Meta": {
