--- a/ApiGateway.ServiceDiscovery.Consul/Yarp.ServiceDiscovery.Consul.csproj
+++ b/ApiGateway.ServiceDiscovery.Consul/Yarp.ServiceDiscovery.Consul.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Abstractions\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Abstractions.csproj" />
+	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Abstractions\Yarp.ServiceDiscovery.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
