--- a/ApiGateway/Yarp.csproj
+++ b/ApiGateway/Yarp.csproj
@@ -20,8 +20,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Abstractions\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Abstractions.csproj" />
-	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Consul\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Consul.csproj" />
+	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Abstractions\Yarp.ServiceDiscovery.Abstractions.csproj" />
+	  <ProjectReference Include="..\ApiGateway.ServiceDiscovery.Consul\Yarp.ServiceDiscovery.Consul.csproj" />
 	</ItemGroup>
 
 </Project>
