--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -1,25 +1,17 @@
 {
   "Logging": {
-    "Console": {
-      "TimestampFormat": "[yyyy-MM-dd HH:mm:ss] "
-    },
-
     "LogLevel": {
-      "Default": "Debug",
-      
-      "Microsoft.AspNetCore": "Information",
-      "Microsoft.AspNetCore.Routing.*": "Warning",
-
-      "Yarp": "Trace"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
 
   "ConsulServiceDiscovery": {
     "ConsulClient": {
       "Host": "http://localhost:8500",
       "Datacenter": "yarp_dc"
     },
-
     "AutoDiscovery": {
       "IsEnabled": true,
       "IntervalSeconds": 30
