--- a/Samples/Api2/Api2.csproj
+++ b/Samples/Api2/Api2.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\ApiGateway.ServiceDiscovery.Abstractions\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Abstractions.csproj" />
-		<ProjectReference Include="..\..\ApiGateway.ServiceDiscovery.Consul\AtiyanSeir.B2B.ApiGateway.ServiceDiscovery.Consul.csproj" />
+		<ProjectReference Include="..\..\ApiGateway.ServiceDiscovery.Abstractions\Yarp.ServiceDiscovery.Abstractions.csproj" />
+		<ProjectReference Include="..\..\ApiGateway.ServiceDiscovery.Consul\Yarp.ServiceDiscovery.Consul.csproj" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
 	</ItemGroup>
