feat: add docker support

--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -9,8 +9,8 @@
 
   "ConsulServiceDiscovery": {
     "ConsulClient": {
-      "Host": "http://localhost:8500",
-      "Datacenter": "yarp_dc"
+      "Host": "http://consul:8500",
+      "Datacenter": ""
     },
     "AutoDiscovery": {
       "IsEnabled": true,
