--- a/Samples/Api1/appsettings.Development.json
+++ b/Samples/Api1/appsettings.Development.json
@@ -9,15 +9,15 @@
   "ConsulServiceRegistry": {
 
     "ConsulClient": {
-      "Host": "http://127.0.0.1:8500",
-      "Datacenter": ""
+      "Host": "http://consul:8500",
+      "Datacenter": null
     },
 
     "ServiceInfo": {
       "Name": "Sample API 1",
-      "Scheme": "https",
-      "Address": "192.168.0.104",
-      "Port": 7094,
+      "Scheme": "http",
+      "Address": "api1",
+      "Port": 8080,
 
       "Meta": {
         "yarp_is_enabled": "true",
