--- a/Samples/Api2/appsettings.Development.json
+++ b/Samples/Api2/appsettings.Development.json
@@ -9,19 +9,19 @@
   "ConsulServiceRegistry": {
 
     "ConsulClient": {
-      "Host": "http://127.0.0.1:8500",
-      "Datacenter": ""
+      "Host": "http://consul:8500",
+      "Datacenter": null
     },
 
     "ServiceInfo": {
       "Name": "My sample Api 2",
-      "Scheme": "https",
-      "Address": "192.168.0.104",
-      "Port": 7005,
+      "Scheme": "http",
+      "Address": "api2",
+      "Port": 8080,
 
       "Meta": {
         "yarp_is_enabled": "true",
-        "yarp_route_match_path": "/api02/{**remainder}",
+        "yarp_route_match_path": "/api2/{**remainder}",
         "yarp_route_transform_path": "{**remainder}",
 
         "service_health_check_endpoint": "/status",
@@ -30,7 +30,7 @@
         "service_health_check_deregister_seconds": 30
       },
 
-      "Tags": [ "flight", "b2b" ]
+      "Tags": [ "test" ]
     }
 
   }
